--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.flyway.mixed=true
 spring.flyway.password=daniil
 spring.flyway.user=daniil
 spring.flyway.locations=classpath:db/migration
+
+logging.level.ua.foxminded.kucherenko=DEBUG
