--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/school_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/school_db?currentSchema=school
 spring.datasource.username=school_admin
 spring.datasource.password=school_admin
 spring.datasource.driver-class-name=org.postgresql.Driver
